--- a/pages/chat-compras.html
+++ b/pages/chat-compras.html
@@ -38,7 +38,7 @@
           <li class="menu-item"><a href="doar.html">Doar</a></li>
           <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html"  rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
