mudancas em adquirir e doar, public delas criado

--- a/pages/doar.html
+++ b/pages/doar.html
@@ -96,14 +96,10 @@
             </div>
             <div class="w-50 border p-1">
                 <div class="form-group">
-                    <h4 class="text-center">Raio de Doação</h4><br>
-                    <label for="formControlRange" class="mb-1">Distância 0 - 20km</label><br>
-                    <input type="range" class="form-control-range w-75" id="formControlRange" min="0" max="20"
-                        onInput="$('#rangeval').html($(this).val())">
-                    <span id="rangeval">20</span>
+                    <h4 class="text-center">Endereço</h4><br>
+                    <a href="editar-endereco.html" class="btn btn-dark m-3">Editar endereço</a><br>
+                    <a href="produto-doador-public+.html" class="float-end btn btn-primary m-3">Doar</a>
                 </div>
-                <p>* Priorize a doação local para sua microrregião</p>
-                <a href="produto-doador-public+.html" class="float-end btn btn-primary m-3">Doar</a>
             </div>
         </div>
     </div>
