--- a/pages/adquirir-public.html
+++ b/pages/adquirir-public.html
@@ -21,17 +21,19 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header deslogada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
       </div>
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
+        <a href="busca-filtragem-public.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
       </div>
 
       <nav class="menu d-flex">
@@ -39,8 +41,7 @@
           <li class="menu-item"><a href="index.html">Inicio</a></li>
           <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
           <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-                alt="Foto de perfil" width="30px"></a></li>
+          <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
             <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
