--- a/pages/index.html
+++ b/pages/index.html
@@ -108,7 +108,7 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header deslogada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
@@ -126,8 +126,8 @@
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
           <li class="menu-item"><a href="index.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar-public.html">Doar</a></li>
           <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
             <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
