titulo da secao de index e home user trocados. link dos cards atualizados

--- a/pages/index.html
+++ b/pages/index.html
@@ -191,7 +191,7 @@
   <div class="produtos container-xl">
     <div class="row">
       <div class="col-md-12">
-        <h2>Acessibilidade <b>Produtos</b></h2>
+        <h2><b>Anúncios</b></h2>
         <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
@@ -333,7 +333,7 @@
   <div class="produtos container-xl">
     <div class="row">
       <div class="col-md-12">
-        <h2>Melhores Preços</h2>
+        <h2><b>Doações</b></h2>
         <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
