--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -192,7 +192,7 @@
   <div class="produtos container-xl">
     <div class="row">
       <div class="col-md-12">
-        <h2>Acessibilidade <b>Produtos</b></h2>
+        <h2><b>Anúncios</b></h2>
         <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
@@ -204,7 +204,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/529638.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -218,7 +218,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/529638.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -232,7 +232,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/529638.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -246,7 +246,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/529638.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -264,7 +264,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/salto-1.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -278,7 +278,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/salto-1.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -292,7 +292,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/salto-1.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -306,7 +306,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                      <a href="produto-anuncio-privado.html"><img src="../assets/salto-1.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -334,7 +334,7 @@
   <div class="produtos container-xl">
     <div class="row">
       <div class="col-md-12">
-        <h2>Melhores Preços</h2>
+        <h2><b>Doações</b></h2>
         <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
@@ -346,7 +346,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-2.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -360,7 +360,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-2.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -374,7 +374,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-2.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -388,7 +388,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-2.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -406,7 +406,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-3.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -420,7 +420,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-3.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -434,7 +434,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-3.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
@@ -448,7 +448,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                      <a href="produto-doador-privado.html"><img src="../assets/salto-3.png" class="img-fluid"
                           alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
