--- a/pages/produto-doador-privado.html
+++ b/pages/produto-doador-privado.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Produto Anúncio</title>
+  <title>Produto Doador</title>
   <style>
     body {
       background: #e2eaef;
@@ -21,41 +21,42 @@
 </head>
 
 <body>
-  <!-- Header deslogada-->
-<header class="header">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="logo">
-      <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-    </div>
+  <!-- Header logada-->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-    <div class="input-group mb-3 w-50">
-      <input type="text" class="form-control input-search" placeholder="Buscar...">
-      <a href="busca-filtragem-public.html">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
-      </a>
-    </div>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
+      </div>
 
-    <nav class="menu d-flex">
-      <ul class="menu-list d-flex justify-content-between align-items-center">
-        <li class="menu-item"><a href="index.html">Inicio</a></li>
-        <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
-        <li class="menu-item"><a href="doar-public.html">Doar</a></li>
-        <li class="menu-item login"><a href="login.html">Login</a></li>
-        <li class="carrinho">
-          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-cart4"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 
   <div class="container">
     <div class="d-flex align-items-center w-100 text-center p-3">
-      <h3>Nome Anunciante</h3>
+      <h3>Nome Doador</h3>
       <a href="perfil-anunciante-public.html" class="btn btn-info m-3">Visitar perfil</a>
     </div>
     <div class="d-flex justify-content-center">
@@ -71,17 +72,17 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/salto-3.png" class="d-block w-75 rounded mx-auto" alt="foto 1">
+              <img src="../assets/salto-2.png" class="d-block w-75 rounded mx-auto" alt="foto 1">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../assets/salto-2.png" class="d-block w-75 rounded mx-auto" alt="foto 2">
+              <img src="../assets/salto-1.png" class="d-block w-75 rounded mx-auto" alt="foto 2">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../assets/salto-1.png" class="d-block w-75 rounded mx-auto" alt="foto 3">
+              <img src="../assets/salto-3.png" class="d-block w-75 rounded mx-auto" alt="foto 3">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
@@ -110,16 +111,15 @@
       </div>
       <div class="w-50 border border-dark d-flex justify-content-center p-2">
         <div class="w-75 border p-1">
-          <div class="d-flex ">
+          <div class="d-flex">
             <ul class="list-group list-group-flush p-2">
               <li class="list-group-item text-center h2">Ficha técnica</li>
-              <li class="list-group-item h5">Tamanho: 39</li>
+              <li class="list-group-item h5">Tamanho: 35</li>
               <li class="list-group-item h5">Categoria: Salto alto</li>
-              <li class="list-group-item h5">Formas de cuidado: Evitar ambientes úmidos</li>
-              <li class="list-group-item h5">Preço: R$ 79,90</li>
+              <li class="list-group-item h5">Formas de cuidado: Evitar ambientes secos</li>
             </ul>
           </div>
-          <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Continuar comprando</a>
+          <a href="chat-doacao.html" class="float-end btn btn-primary m-3">Mandar mensagem</a>
         </div>
       </div>
     </div>
