--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -2,174 +2,149 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/arthur.css">
-    <link rel="stylesheet" href="../styles/erick.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <title>Minha Conta</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/arthur.css">
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title>Minha Conta</title>
 
-    <style>
-        body {
-            background: #e2eaef;
-            font-family: "Open Sans", sans-serif;
-        }
-
-        .carousel .item {
-            color: #747d89;
-            min-height: 325px;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .carousel .thumb-wrapper {
-            padding: 25px 15px;
-            background: #fff;
-            border-radius: 6px;
-            text-align: center;
-            position: relative;
-            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-        }
-
-        .carousel .item .img-box {
-            height: 120px;
-            margin-bottom: 20px;
-            width: 100%;
-            position: relative;
-        }
-
-        .carousel .item img {
-            max-width: 100%;
-            max-height: 100%;
-            display: inline-block;
-            position: absolute;
-            bottom: 0;
-            margin: 0 auto;
-            left: 0;
-            right: 0;
-        }
-
-
-        .carousel-control-prev i {
-            margin-left: -2px;
-        }
-
-        .carousel-control-next i {
-            margin-right: -4px;
-        }
-
-        .carousel-indicators {
-            bottom: -50px;
-        }
-
-        .carousel-indicators li,
-        .carousel-indicators li.active {
-            width: 10px;
-            height: 10px;
-            margin: 4px;
-            border-radius: 50%;
-            border: none;
-        }
-
-        .carousel-indicators li {
-            background: rgba(0, 0, 0, 0.2);
-        }
-
-        .carousel-indicators li.active {
-            background: rgba(0, 0, 0, 0.6);
-        }
-
-        .carousel .wish-icon {
-            position: absolute;
-            right: 10px;
-            top: 10px;
-            z-index: 99;
-            cursor: pointer;
-            font-size: 16px;
-            color: #abb0b8;
-        }
-
-        .carousel .wish-icon .fa-heart {
-            color: #ff6161;
-        }
-    </style>
+  <style>
+    body {
+      background: #e2eaef;
+      font-family: "Open Sans", sans-serif;
+    }
+  </style>
 </head>
 
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="logo">
-                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-            </div>
+  <!-- Header -->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-            <div class="input-group mb-3 w-50">
-                <input type="text" class="form-control input-search" placeholder="Buscar...">
-                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-                </div>
-            </div>
-
-            <nav class="menu d-flex">
-                <ul class="menu-list d-flex justify-content-between align-items-center">
-                    <li class="menu-item"><a href="index.html">Inicio</a></li>
-                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-                    <li class="menu-item"><a href="doar.html">Doar</a></li>
-                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png" alt="Foto de perfil" width="30px"></a></li>
-                    <li class="carrinho">
-                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-cart4"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
         </div>
-    </header>
+      </div>
 
-
-
-    <div class="d-flex container justify-content-around">
-        <div class="w-25">
-            <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil"
-                class="w-75">
-            <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
-        </div>
-        <div class="w-75 p-3">
-            <form>
-                <div class="form-group">
-                    <label for="floatingNomeCompleto" class="mt-1 mb-1 mr-1">Nome Completo</label>
-                    <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Ex.: João da Silva Santos">
-                </div>
-                <div class="form-group">
-                    <label for="floatingEmail" class="mt-1 mb-1 mr-1">Email</label>
-                    <input type="email" class="form-control" id="floatingEmail" placeholder="Ex.: exemplo@gmail.com">
-                </div>
-                <div class="form-group">
-                    <label for="floatingTelefone" class="mt-1 mb-1 mr-1">Telefone</label>
-                    <input type="text" class="form-control" id="floatingTelefone" placeholder="Ex.: (xx) xxxxx-xxxx">
-                </div>
-                <div class="form-group">
-                    <label for="floatingGenero" class="mt-1 mb-1 mr-1">Gênero</label>
-                    <select class="form-control form-control2" id="floatingGenero">
-                        <option selected>Selecione</option>
-                        <option value="masculino">Masculino</option>
-                        <option value="feminino">Feminino</option>
-                        <option value="outro">Outro</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="floatingEndereco" class="mt-1 mb-1 mr-1">Endereço</label>
-                    <input type="text" class="form-control" id="floatingEndereco" placeholder="Ex.: Rua Almirante 56">
-                </div>
-                <div>
-                    <input class="btn btn-primary mt-2 float-end" type="submit" value="Submit">
-                </div>
-            </form>
-        </div>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </header>
+
+
+
+  <div class="d-flex container justify-content-around">
+    <div class="w-25">
+      <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil" class="w-75">
+      <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
+    </div>
+    <div class="w-75 p-3">
+      <h4 class="my-2"><b>Dados Pessoais</b></h4>
+      <form>
+        <div class="row">
+          <div class="col-6">
+            <label for="floatingNomeCompleto" class="mt-1 mb-1 mr-1">Nome Completo</label>
+            <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Ex.: João da Silva Santos">
+          </div>
+          <div class="col-6">
+            <label for="floatingEmail" class="mt-1 mb-1 mr-1">Email</label>
+            <input type="email" class="form-control" id="floatingEmail" placeholder="Ex.: exemplo@gmail.com">
+          </div>
+          <div class="col-6">
+            <label for="floatingTelefone" class="mt-1 mb-1 mr-1">Telefone</label>
+            <input type="text" class="form-control" id="floatingTelefone" placeholder="Ex.: (xx) xxxxx-xxxx">
+          </div>
+          <div class="col-6">
+            <label for="floatingGenero" class="mt-1 mb-1 mr-1">Gênero</label>
+            <select class="form-control form-control2" id="floatingGenero">
+              <option selected>Selecione</option>
+              <option value="masculino">Masculino</option>
+              <option value="feminino">Feminino</option>
+              <option value="outro">Outro</option>
+            </select>
+          </div>
+        </div>
+        <h4 class="my-2"><b>Endereço</b></h4>
+        <div class="row">
+          <div class="col-4">
+            <label for="floatingCEP" class="mt-1 mb-1 mr-1">CEP</label>
+            <input type="text" class="form-control" id="floatingCEP" placeholder="Ex.: 76.986-125">
+          </div>
+          <div class="col-8">
+            <label for="floatingEndereco" class="mt-1 mb-1 mr-1">Endereço</label>
+            <input type="text" class="form-control" id="floatingEndereco" placeholder="Ex.: Av. das Araras">
+          </div>
+          <div class="col-2">
+            <label for="floatingNumero" class="mt-1 mb-1 mr-1">Número</label>
+            <input type="text" class="form-control" id="floatingNumero" placeholder="Ex.: 26">
+          </div>
+          <div class="col-10">
+            <label for="floatingComplemento" class="mt-1 mb-1 mr-1">Complemento</label>
+            <input type="text" class="form-control" id="floatingComplemento" placeholder="Ex.: Apto 206 Bloco K">
+          </div>
+          <div class="col-4">
+            <label for="floatingBairro" class="mt-1 mb-1 mr-1">Bairro</label>
+            <input type="text" class="form-control" id="floatingBairro" placeholder="Ex.: Taguatinga">
+          </div>
+          <div class="col-4">
+            <label for="floatingCidade" class="mt-1 mb-1 mr-1">Cidade</label>
+            <input type="text" class="form-control" id="floatingCidade" placeholder="Ex.: Brasília">
+          </div>
+          <div class="col-4">
+            <label for="floatingUF" class="mt-1 mb-1 mr-1">DF</label>
+            <select class="form-control form-control2" id="floatingUF">
+              <option selected>Selecione</option>
+              <option value="df">DF</option>
+              <option value="go">GO</option>
+            </select>
+          </div>
+        </div>
+        <h4 class="my-2"><b>Forma de pagamento</b></h4>
+        <div class="row">
+          <div class="col-12">
+            <label for="floatingNomeTitular" class="mt-1 mb-1 mr-1">Nome do titular</label>
+            <input type="text" class="form-control" id="floatingNomeTitular" placeholder="Ex.: Luan M Gomes">
+          </div>
+          <div class="col-6">
+            <label for="floatingNumeroCartao" class="mt-1 mb-1 mr-1">Número do cartão</label>
+            <input type="text" class="form-control" id="floatingNumeroCartao" placeholder="Ex.: 5423 5637 4598 1234">
+          </div>
+          <div class="col-3">
+            <label for="floatingCVV" class="mt-1 mb-1 mr-1">CVV</label>
+            <input type="text" class="form-control" id="floatingCVV" placeholder="Ex.: 564">
+          </div>
+          <div class="col-3">
+            <label for="floatingDataVencimento" class="mt-1 mb-1 mr-1">Data de vencimento</label>
+            <input type="text" class="form-control" id="floatingDataVencimento" placeholder="Ex.: 11/27">
+          </div>
+        </div>
+        <div>
+          <input class="btn btn-primary mt-2 float-end" type="submit" value="Submit">
+        </div>
+      </form>
+    </div>
+  </div>
 
 
 
