--- a/pages/chat-anuncios.html
+++ b/pages/chat-anuncios.html
@@ -18,27 +18,30 @@
 <body>
 
 
-  <!-- Header -->
+  <!-- Header logada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
       </div>
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
       </div>
 
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
-          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
           <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
           <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="login.html">Login</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -46,11 +49,11 @@
       </nav>
     </div>
   </header>
-  <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link active " href="./chat-anuncios.html">Meus Anúncios</a> <a
-      class="nav-link  " href="./chat-compras.html">Compras</a>
-      
-      <a class="nav-link "
-      href="./chat-doacao.html">Doações</a> </nav>
+  <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link active " href="./chat-anuncios.html">Meus
+      Anúncios</a> <a class="nav-link  " href="./chat-compras.html">Compras</a>
+
+    <a class="nav-link " href="./chat-doacao.html">Doações</a>
+  </nav>
 
 
 
@@ -74,7 +77,7 @@
           <div class="message sender">
             <span class="name">Você:</span>
             <div class="content">
-             Tenho uma duvida sobre meu pedido 
+              Tenho uma duvida sobre meu pedido
             </div>
           </div>
           <div class="message">
