atualizando header em todas as paginas. colocando link icon no head de todas as paginas

--- a/pages/chat-doacao.html
+++ b/pages/chat-doacao.html
@@ -41,7 +41,7 @@
           <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
                 alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -49,6 +49,8 @@
       </nav>
     </div>
   </header>
+
+
   <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link" href="./chat-anuncios.html">Meus Anúncios</a>
     <a class="nav-link" href="./chat-compras.html">Compras</a> <a class="nav-link active"
       href="./chat-doacao.html">Doações</a>
