--- a/pages/meu-carrinho-public.html
+++ b/pages/meu-carrinho-public.html
@@ -2,21 +2,21 @@
 <html lang="pt-BR">
 
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="../styles/marquim.css">
-<link rel="stylesheet" href="../styles/erick.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-<title>Login</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/marquim.css">
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title>Meu Carrinho Public</title>
 </head>
 
 <body>
-<!-- Header -->
-<header class="header">
+  <!-- Header deslogada-->
+  <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
         <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
@@ -33,11 +33,11 @@
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
           <li class="menu-item"><a href="index.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar-public.html">Doar</a></li>
           <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -46,7 +46,7 @@
     </div>
   </header>
 
-<main>
+  <main>
 
     <div class="page-title">Seu Carrinho</div>
     <div class="content">
@@ -155,8 +155,8 @@
         <a href="efetuar-compra.html" class="float-end btn btn-primary m-3">Finalizar compra</a>
       </aside>
     </div>
-</main>
-      
+  </main>
+
 </body>
 
 </html>
