--- a/pages/meu-carrinho.html
+++ b/pages/meu-carrinho.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../styles/marquim.css">
   <link rel="stylesheet" href="../styles/erick.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Meu carrinho</title>
+  <title>Meu Carrinho</title>
 </head>
 
 <body>
