--- a/pages/adquirir-public.html
+++ b/pages/adquirir-public.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Adquirir</title>
+  <title>Adquirir Public</title>
   <style>
     body {
       background: #e2eaef;
