--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/erick.css">
@@ -53,7 +54,7 @@
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Header logada-->
     <header class="header">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
@@ -62,8 +63,11 @@
 
             <div class="input-group mb-3 w-50">
                 <input type="text" class="form-control input-search" placeholder="Buscar...">
-                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-                </div>
+                <a href="busca-filtragem-privada.html">
+                    <div class="input-group-append"><button class="btn btn-primary"><i
+                                class="bi bi-search"></i></button>
+                    </div>
+                </a>
             </div>
 
             <nav class="menu d-flex">
@@ -74,7 +78,7 @@
                     <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
                                 alt="Foto de perfil" width="30px"></a></li>
                     <li class="carrinho">
-                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+                        <a href="meu-carrinho.html" rel="noopener noreferrer">
                             <i class="bi bi-cart4"></i>
                         </a>
                     </li>
