--- a/pages/busca-filtragem-privada.html
+++ b/pages/busca-filtragem-privada.html
@@ -12,7 +12,6 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Bootstrap Multiple Item Product Carousel</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
@@ -25,7 +24,7 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header logada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
@@ -48,7 +47,7 @@
           <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
                 alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
