--- a/pages/busca-filtragem-public.html
+++ b/pages/busca-filtragem-public.html
@@ -12,7 +12,6 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Bootstrap Multiple Item Product Carousel</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
@@ -43,11 +42,11 @@
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
           <li class="menu-item"><a href="index.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar-public.html">Doar</a></li>
           <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
