--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/arthur.css">
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Header deslogada-->
     <header class="header">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
@@ -23,18 +24,21 @@
 
             <div class="input-group mb-3 w-50">
                 <input type="text" class="form-control input-search" placeholder="Buscar...">
-                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-                </div>
+                <a href="busca-filtragem-public.html">
+                    <div class="input-group-append"><button class="btn btn-primary"><i
+                                class="bi bi-search"></i></button>
+                    </div>
+                </a>
             </div>
 
             <nav class="menu d-flex">
                 <ul class="menu-list d-flex justify-content-between align-items-center">
                     <li class="menu-item"><a href="index.html">Inicio</a></li>
-                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-                    <li class="menu-item"><a href="doar.html">Doar</a></li>
+                    <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
+                    <li class="menu-item"><a href="doar-public.html">Doar</a></li>
                     <li class="menu-item login"><a href="login.html">Login</a></li>
                     <li class="carrinho">
-                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+                        <a href="meu-carrinho-public.html" rel="noopener noreferrer">
                             <i class="bi bi-cart4"></i>
                         </a>
                     </li>
@@ -42,6 +46,8 @@
             </nav>
         </div>
     </header>
+
+
     <div class="container">
         <div class="row">
             <div class="col-sm-9 col-md-7 col-lg-5 mx-auto w-50">
