--- a/pages/doar-public.html
+++ b/pages/doar-public.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Doar</title>
+  <title>Doar Public</title>
 
   <style>
     body {
@@ -44,7 +44,7 @@
           <li class="menu-item"><a href="doar-public.html">Doar</a></li>
           <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -92,8 +92,8 @@
       <div class="w-50 border p-1">
         <div class="form-group">
           <h4 class="text-center">Endereço</h4><br>
-          <a href="editar-endereco.html" class="btn btn-dark m-3">Editar endereço</a><br>
-          <a href="produto-doador-public+.html" class="float-end btn btn-primary m-3">Doar</a>
+          <a href="login.html" class="btn btn-dark m-3">Editar endereço</a><br>
+          <a href="login.html" class="float-end btn btn-primary m-3">Doar</a>
         </div>
       </div>
     </div>
