--- a/pages/editar-endereco.html
+++ b/pages/editar-endereco.html
@@ -2,78 +2,81 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/arthur.css">
-    <link rel="stylesheet" href="../styles/erick.css">
-    <link rel="stylesheet" href="../styles/yago.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/arthur.css">
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="../styles/yago.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title>Editar Endereço</title>
 </head>
 
 <body>
 
+  <!-- Header logada-->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="logo">
-                <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-            </div>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
+      </div>
 
-            <div class="input-group mb-3 w-50">
-                <input type="text" class="form-control input-search" placeholder="Buscar...">
-                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-                </div>
-            </div>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-            <nav class="menu d-flex">
-                <ul class="menu-list d-flex justify-content-between align-items-center">
-                    <li class="menu-item"><a href="index.html">Inicio</a></li>
-                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-                    <li class="menu-item"><a href="doar.html">Doar</a></li>
-                    <li class="menu-item login"><a href="login.html">Login</a></li>
-                    <li class="carrinho">
-                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-cart4"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+  <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link" href="anuncios.html">Meus Anúncios</a> <a
+      class="nav-link active " href="compras.html">Compras</a> <a class="nav-link "
+      href="doacoes-atualizadas.html">Doações</a> </nav>
+
+
+
+  <div class="d-flex container justify-content-around">
+    <div class="w-25 p-3 border border-dark"> <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil"
+        class="w-75"> <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a> </div>
+    <div class="w-75 p-3 border border-dark">
+      <form>
+        <div class="form-group"> <label for="floatingNomeCompleto" class="mt-1 mb-1 mr-1">Nome Completo</label>
+          <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Ex.: João da Silva Santos">
         </div>
-    </header>
-    <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link" href="anuncios.html">Meus Anúncios</a> <a
-            class="nav-link active " href="compras.html">Compras</a> <a class="nav-link "
-            href="doacoes-atualizadas.html">Doações</a> </nav>
+        <div class="form-group"> <label for="floatingEmail" class="mt-1 mb-1 mr-1">Email</label> <input type="email"
+            class="form-control" id="floatingEmail" placeholder="Ex.: exemplo@gmail.com">
+        </div>
+        <div class="form-group">
 
 
-
-    <div class="d-flex container justify-content-around">
-        <div class="w-25 p-3 border border-dark"> <img src="../assets/foto-perfil-exemplo.png"
-                alt="Icone de foto de perfil" class="w-75"> <a href="index.html"
-                class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a> </div>
+        </div>
         <div class="w-75 p-3 border border-dark">
-            <form>
-                <div class="form-group"> <label for="floatingNomeCompleto" class="mt-1 mb-1 mr-1">Nome Completo</label>
-                    <input type="text" class="form-control" id="floatingNomeCompleto"
-                        placeholder="Ex.: João da Silva Santos"> </div>
-                <div class="form-group"> <label for="floatingEmail" class="mt-1 mb-1 mr-1">Email</label> <input
-                        type="email" class="form-control" id="floatingEmail" placeholder="Ex.: exemplo@gmail.com">
-                </div>
-                <div class="form-group">
 
-
-                </div>
-                <div class="w-75 p-3 border border-dark">
-
-                </div>
+        </div>
 
 
 
-                </main>
+        </main>
 
 
 
