--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -2,23 +2,49 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Endereço</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <title>Endereço</title>
 </head>
 
 <body>
-    <h1 title="Endereço">Endereço</h1><hr>
-    <a href="home-user.html">Home User</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
-    <a href="perfil-user.html">Perfil do Usuário</a><hr>
+  <!-- Header logada-->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-    <p>Campos de endereço</p>
-    <a href="minha-conta.html">Salvar endereço</a>
-        
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
+      </div>
+
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <p>Campos de endereço</p>
+  <a href="minha-conta.html">Salvar endereço</a>
+
 </body>
 
 </html>
