--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Bootstrap Multiple Item Product Carousel</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -108,7 +107,7 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header logada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
@@ -119,24 +118,24 @@
         <input type="text" class="form-control input-search" placeholder="Buscar...">
         <a href="busca-filtragem-privada.html">
           <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
         </a>
       </div>
-    </div>
 
-    <nav class="menu d-flex">
-      <ul class="menu-list d-flex justify-content-between align-items-center">
-        <li class="menu-item"><a href="home-user.html">Inicio</a></li>
-        <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-        <li class="menu-item"><a href="doar.html">Doar</a></li>
-        <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-              alt="Foto de perfil" width="30px"></a></li>
-        <li class="carrinho">
-          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-cart4"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
 
