--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header logada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
@@ -31,19 +31,21 @@
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
       </div>
 
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
-          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
           <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
           <li class="menu-item"><a href="doar.html">Doar</a></li>
           <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
                 alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
