--- a/pages/perfil-anunciante-public.html
+++ b/pages/perfil-anunciante-public.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Perfil do anunciante</title>
+  <title>Perfil do anunciante Public</title>
   <style>
     body {
       background: #e2eaef;
@@ -21,28 +21,29 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header deslogada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
       </div>
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
+        <a href="busca-filtragem-public.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
       </div>
 
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
           <li class="menu-item"><a href="index.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-                alt="Foto de perfil" width="30px"></a></li>
+          <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar-public.html">Doar</a></li>
+          <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -83,42 +84,45 @@
     <h2 class="text-center">Anúncios/Doações</h2>
 
     <div class="w-100 row text-center align-items-center p-4">
-        <div class="col-md-4">
-          <div class="thumb-wrapper">
-            <div class="img-box">
-              <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="rounded mx-auto" alt="Foto Sapato" width="200px"></a>
-            </div>
-            <div class="thumb-content">
-              <h4>Tênis Verde</h4>
-              <p class="item-price"><strike>R$ 99,90</strike> <span>R$ 69,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
-            </div>
+      <div class="col-md-4">
+        <div class="thumb-wrapper">
+          <div class="img-box">
+            <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="rounded mx-auto"
+                alt="Foto Sapato" width="200px"></a>
+          </div>
+          <div class="thumb-content">
+            <h4>Tênis Verde</h4>
+            <p class="item-price"><strike>R$ 99,90</strike> <span>R$ 69,90</span></p>
+            <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="thumb-wrapper">
-            <div class="img-box">
-              <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="rounded mx-auto" alt="Foto Sapato" width="200px"></a>
-            </div>
-            <div class="thumb-content">
-              <h4>Salto Alto Preto</h4>
-              <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
-            </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumb-wrapper">
+          <div class="img-box">
+            <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="rounded mx-auto"
+                alt="Foto Sapato" width="200px"></a>
+          </div>
+          <div class="thumb-content">
+            <h4>Salto Alto Preto</h4>
+            <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
+            <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="thumb-wrapper">
-            <div class="img-box">
-              <a href="produto-anuncio-public+.html"><img src="../assets/salto-3.png" class="rounded mx-auto" alt="Foto Sapato" width="200px"></a>
-            </div>
-            <div class="thumb-content">
-              <h4>Salto Alto Vermelho</h4>
-              <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
-            </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumb-wrapper">
+          <div class="img-box">
+            <a href="produto-anuncio-public+.html"><img src="../assets/salto-3.png" class="rounded mx-auto"
+                alt="Foto Sapato" width="200px"></a>
+          </div>
+          <div class="thumb-content">
+            <h4>Salto Alto Vermelho</h4>
+            <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
+            <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
           </div>
         </div>
+      </div>
     </div>
 
     <div class="w-100 p-4">
