--- a/pages/perfil-user.html
+++ b/pages/perfil-user.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/arthur.css">
@@ -55,7 +56,7 @@
   <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="btn-group-vertical w-50">
       <a href="anuncios.html" class="btn btn-primary btn-lg p-2 m-2">Anúncios</a><br>
-      <a href="#" class="btn btn-primary btn-lg p-2 m-2">Meus Favoritos</a><br>
+      <a href="meus-favoritos.html" class="btn btn-primary btn-lg p-2 m-2">Meus Favoritos</a><br>
       <a href="nova-forma-pagamento.html" class="btn btn-primary btn-lg p-2 m-2">Formas de pagamento</a><br>
       <a href="minha-conta.html" class="btn btn-primary btn-lg p-2 m-2">Minha conta</a><br>
       <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Sair</a>
