--- a/pages/rastreamento.html
+++ b/pages/rastreamento.html
@@ -2,233 +2,232 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
-    <title>Rastreamento</title>
-    <link rel="stylesheet" href="../styles/erick.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body {
-            color: #000;
-            overflow-x: hidden;
-            height: 100%;
-            background-color: #8C9EFF;
-            background-repeat: no-repeat;
-        }
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <title>Rastreamento</title>
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    body {
+      color: #000;
+      overflow-x: hidden;
+      height: 100%;
+      background-color: #8C9EFF;
+      background-repeat: no-repeat;
+    }
 
-        .card {
-            z-index: 0;
-            background-color: #ECEFF1;
-            padding-bottom: 20px;
-            margin-top: 90px;
-            margin-bottom: 90px;
-            border-radius: 10px;
-        }
+    .card {
+      z-index: 0;
+      background-color: #ECEFF1;
+      padding-bottom: 20px;
+      margin-top: 90px;
+      margin-bottom: 90px;
+      border-radius: 10px;
+    }
 
-        .top {
-            padding-top: 40px;
-            padding-left: 13% !important;
-            padding-right: 13% !important;
-        }
+    .top {
+      padding-top: 40px;
+      padding-left: 13% !important;
+      padding-right: 13% !important;
+    }
 
-        /*Icon progressbar*/
-        #progressbar {
-            margin-bottom: 30px;
-            overflow: hidden;
-            color: #455A64;
-            padding-left: 0px;
-            margin-top: 30px;
-        }
+    /*Icon progressbar*/
+    #progressbar {
+      margin-bottom: 30px;
+      overflow: hidden;
+      color: #455A64;
+      padding-left: 0px;
+      margin-top: 30px;
+    }
 
-        #progressbar li {
-            list-style-type: none;
-            font-size: 13px;
-            width: 25%;
-            float: left;
-            position: relative;
-            font-weight: 400;
-        }
+    #progressbar li {
+      list-style-type: none;
+      font-size: 13px;
+      width: 25%;
+      float: left;
+      position: relative;
+      font-weight: 400;
+    }
 
-        #progressbar .step0:before {
-            font-family: FontAwesome;
-            content: "\f10c";
-            color: #fff;
-        }
+    #progressbar .step0:before {
+      font-family: FontAwesome;
+      content: "\f10c";
+      color: #fff;
+    }
 
-        #progressbar li:before {
-            width: 40px;
-            height: 40px;
-            line-height: 45px;
-            display: block;
-            font-size: 20px;
-            background: #C5CAE9;
-            border-radius: 50%;
-            margin: auto;
-            padding: 0px;
-        }
+    #progressbar li:before {
+      width: 40px;
+      height: 40px;
+      line-height: 45px;
+      display: block;
+      font-size: 20px;
+      background: #C5CAE9;
+      border-radius: 50%;
+      margin: auto;
+      padding: 0px;
+    }
 
-        /*ProgressBar connectors*/
-        #progressbar li:after {
-            content: '';
-            width: 100%;
-            height: 12px;
-            background: #C5CAE9;
-            position: absolute;
-            left: 0;
-            top: 16px;
-            z-index: -1;
-        }
+    /*ProgressBar connectors*/
+    #progressbar li:after {
+      content: '';
+      width: 100%;
+      height: 12px;
+      background: #C5CAE9;
+      position: absolute;
+      left: 0;
+      top: 16px;
+      z-index: -1;
+    }
 
-        #progressbar li:last-child:after {
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
-            position: absolute;
-            left: -50%;
-        }
+    #progressbar li:last-child:after {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      position: absolute;
+      left: -50%;
+    }
 
-        #progressbar li:nth-child(2):after,
-        #progressbar li:nth-child(3):after {
-            left: -50%;
-        }
+    #progressbar li:nth-child(2):after,
+    #progressbar li:nth-child(3):after {
+      left: -50%;
+    }
 
-        #progressbar li:first-child:after {
-            border-top-left-radius: 10px;
-            border-bottom-left-radius: 10px;
-            position: absolute;
-            left: 50%;
-        }
+    #progressbar li:first-child:after {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      position: absolute;
+      left: 50%;
+    }
 
-        #progressbar li:last-child:after {
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
-        }
+    #progressbar li:last-child:after {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
 
-        #progressbar li:first-child:after {
-            border-top-left-radius: 10px;
-            border-bottom-left-radius: 10px;
-        }
+    #progressbar li:first-child:after {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
 
-        /*Color number of the step and the connector before it*/
-        #progressbar li.active:before,
-        #progressbar li.active:after {
-            background: #651FFF;
-        }
+    /*Color number of the step and the connector before it*/
+    #progressbar li.active:before,
+    #progressbar li.active:after {
+      background: #651FFF;
+    }
 
-        #progressbar li.active:before {
-            font-family: FontAwesome;
-            content: "\f00c";
-        }
+    #progressbar li.active:before {
+      font-family: FontAwesome;
+      content: "\f00c";
+    }
 
-        .icon {
-            width: 60px;
-            height: 60px;
-            margin-right: 15px;
-        }
+    .icon {
+      width: 60px;
+      height: 60px;
+      margin-right: 15px;
+    }
 
-        .icon-content {
-            padding-bottom: 20px;
-        }
+    .icon-content {
+      padding-bottom: 20px;
+    }
 
-        @media screen and (max-width: 992px) {
-            .icon-content {
-                width: 50%;
-            }
-        }
-    </style>
-    <script>
-    </script>
+    @media screen and (max-width: 992px) {
+      .icon-content {
+        width: 50%;
+      }
+    }
+  </style>
+  <script>
+  </script>
 </head>
 
 <body>
-    <!-- Header logada-->
-    <header class="header">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="logo">
-                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-            </div>
+  <!-- Header logada-->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-            <div class="input-group mb-3 w-50">
-                <input type="text" class="form-control input-search" placeholder="Buscar...">
-                <a href="busca-filtragem-privada.html">
-                    <div class="input-group-append"><button class="btn btn-primary"><i
-                                class="bi bi-search"></i></button>
-                    </div>
-                </a>
-            </div>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
+      </div>
 
-            <nav class="menu d-flex">
-                <ul class="menu-list d-flex justify-content-between align-items-center">
-                    <li class="menu-item"><a href="home-user.html">Inicio</a></li>
-                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-                    <li class="menu-item"><a href="doar.html">Doar</a></li>
-                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-                                alt="Foto de perfil" width="30px"></a></li>
-                    <li class="carrinho">
-                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-cart4"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <div class="container px-1 px-md-4 py-5 mx-auto">
-        <div class="card">
-            <div class="row d-flex justify-content-between px-3 top">
-                <div class="d-flex">
-                    <h5>PEDIDO <span class="text-primary font-weight-bold">#0015</span></h5>
-                </div>
-                <div class="d-flex flex-column text-sm-right">
-                    <p class="mb-0">Entrega esperada <span>15/06/23</span></p>
-                    <p>Sedex <span class="font-weight-bold">BR984516548DF</span></p>
-                </div>
-            </div>
-            <!-- Add class 'active' to progress -->
-            <div class="row d-flex justify-content-center">
-                <div class="col-12">
-                    <ul id="progressbar" class="text-center">
-                        <li class="active step0"></li>
-                        <li class="active step0"></li>
-                        <li class="active step0"></li>
-                        <li class="step0"></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row justify-content-between top">
-                <div class="row d-flex icon-content">
-                    <img class="icon" src="../assets/pedido-processado.png">
-                    <div class="d-flex flex-column">
-                        <p class="font-weight-bold">Pedido<br>Processado</p>
-                    </div>
-                </div>
-                <div class="row d-flex icon-content">
-                    <img class="icon" src="../assets/pedido-enviado.png">
-                    <div class="d-flex flex-column">
-                        <p class="font-weight-bold">Pedido<br>Enviado</p>
-                    </div>
-                </div>
-                <div class="row d-flex icon-content">
-                    <img class="icon" src="../assets/pedido-a-caminho.png">
-                    <div class="d-flex flex-column">
-                        <p class="font-weight-bold">Pedido<br>A caminho</p>
-                    </div>
-                </div>
-                <div class="row d-flex icon-content">
-                    <img class="icon" src="../assets/pedido-entregue.png">
-                    <div class="d-flex flex-column">
-                        <p class="font-weight-bold">Pedido<br>Entregue</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </header>
+
+  <div class="container px-1 px-md-4 py-5 mx-auto">
+    <div class="card">
+      <div class="row d-flex justify-content-between px-3 top">
+        <div class="d-flex">
+          <h5>PEDIDO <span class="text-primary font-weight-bold">#0015</span></h5>
+        </div>
+        <div class="d-flex flex-column text-sm-right">
+          <p class="mb-0">Entrega esperada <span>15/06/23</span></p>
+          <p>Sedex <span class="font-weight-bold">BR984516548DF</span></p>
+        </div>
+      </div>
+      <!-- Add class 'active' to progress -->
+      <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          <ul id="progressbar" class="text-center">
+            <li class="active step0"></li>
+            <li class="active step0"></li>
+            <li class="active step0"></li>
+            <li class="step0"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-between top">
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-processado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Processado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-enviado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Enviado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-a-caminho.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>A caminho</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-entregue.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Entregue</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
