linkando melhor as paginas

--- a/pages/adquirir-public.html
+++ b/pages/adquirir-public.html
@@ -107,7 +107,7 @@
             onInput="$('#rangeval').html($(this).val())">
           <span id="rangeval">45</span>
         </div>
-        <a href="busca-filtragem-privada.html" class="float-end btn btn-primary m-3">Adquirir</a>
+        <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Adquirir</a>
       </div>
     </div>
   </div>
