--- a/pages/busca-filtragem-public.html
+++ b/pages/busca-filtragem-public.html
@@ -59,7 +59,7 @@
     <div>
       <div class="row d-flex align-items-center w-100">
         <div class="col-md-11 p-0">
-          <h3 class="mb-0"><b>Outros filtros</b></h3>
+          <h3 class="mb-0"><b>Resultados da busca</b></h3>
         </div>
       </div>
       <div class="row g-2 d-flex align-items-center w-100">
