--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Bootstrap Multiple Item Product Carousel</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -107,7 +108,7 @@
 </head>
 
 <body>
-  <!-- Header deslogada-->
+  <!-- Header -->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
@@ -126,10 +127,10 @@
         <ul class="menu-list d-flex justify-content-between align-items-center">
           <li class="menu-item"><a href="index.html">Inicio</a></li>
           <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar-public.html">Doar</a></li>
+          <li class="menu-item"><a href="login.html">Doar</a></li>
           <li class="menu-item login"><a href="login.html">Login</a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -151,8 +152,8 @@
                     o calçado perfeito para você</p>
                   <h1 class="display-1 text-white mb-5 animated slideInRight">Passo certo para um
                     mundo melhor</h1>
-                  <a href="anunciar.html" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
-                  <a href="doar.html" class="btn btn-primary py-2 px-5 animated  .doar slideInRight">Doar</a>
+                  <a href="login.html" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
+                  <a href="login.html" class="btn btn-primary py-2 px-5 animated  .doar slideInRight">Doar</a>
                 </div>
               </div>
             </div>
@@ -168,8 +169,8 @@
                     o calçado perfeito para você</p>
                   <h1 class="display-1 text-white mb-5 animated slideInRight">Caminhe com liberdade e
                     conforto</h1>
-                  <a href="anunciar.html" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
-                  <a href="doar.html" class="btn btn-primary doar py-2 px-5 animated slideInRight">Doar</a>
+                  <a href="login.html" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
+                  <a href="login.html" class="btn btn-primary doar py-2 px-5 animated slideInRight">Doar</a>
                 </div>
               </div>
             </div>
@@ -190,7 +191,7 @@
   <div class="produtos container-xl">
     <div class="row">
       <div class="col-md-12">
-        <h2><b>Anúncios</b></h2>
+        <h2>Acessibilidade <b>Produtos</b></h2>
         <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
@@ -332,7 +333,7 @@
   <div class="produtos container-xl">
     <div class="row">
       <div class="col-md-12">
-        <h2><b>Doações</b></h2>
+        <h2>Melhores Preços</h2>
         <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
