--- a/pages/meu-carrinho-public.html
+++ b/pages/meu-carrinho-public.html
@@ -152,7 +152,7 @@
             <span>R$ 418</span>
           </footer>
         </div>
-        <a href="efetuar-compra.html" class="float-end btn btn-primary m-3">Finalizar compra</a>
+        <a href="login.html" class="float-end btn btn-primary m-3">Finalizar compra</a>
       </aside>
     </div>
   </main>
