--- a/pages/anunciar.html
+++ b/pages/anunciar.html
@@ -87,7 +87,7 @@
                     <input type="text" class="form-control">
                     <span class="input-group-text">,00</span>
                 </div>
-                <a href="produto-anuncio-public+.html" class="float-end btn btn-primary m-3">Anunciar</a>
+                <a href="anuncios.html" class="float-end btn btn-primary m-3">Anunciar</a>
             </div>
         </div>
     </div>
