--- a/pages/doar.html
+++ b/pages/doar.html
@@ -101,7 +101,7 @@
                 <div class="form-group">
                     <h4 class="text-center">Endereço</h4><br>
                     <a href="editar-endereco.html" class="btn btn-dark m-3">Editar endereço</a><br>
-                    <a href="produto-doador-public+.html" class="float-end btn btn-primary m-3">Doar</a>
+                    <a href="doacoes-atualizadas.html" class="float-end btn btn-primary m-3">Doar</a>
                 </div>
             </div>
         </div>
