--- a/pages/produto-anuncio-privado.html
+++ b/pages/produto-anuncio-privado.html
@@ -120,7 +120,7 @@
               <li class="list-group-item h5">Preço: R$ 79,90</li>
             </ul>
           </div>
-          <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Continuar comprando</a>
+          <a href="meu-carrinho.html" class="float-end btn btn-primary m-3">Comprar</a>
         </div>
       </div>
     </div>
