--- a/admin/endereco.html
+++ b/admin/endereco.html
@@ -83,6 +83,9 @@
                 <li class="">
                     <a href="pedido.html"><i class="material-icons">receipt_long</i><span>Pedido</span></a>
                 </li>
+                <li class="">
+                    <a href="rastreamento.html"><i class="material-icons">receipt_long</i><span>Rastreamento</span></a>
+                </li>
             </ul>
 
 
