--- a/admin/rastreamento.html
+++ b/admin/rastreamento.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>crud dashboard</title>
+    <title>Rastreamento</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!----css3---->
@@ -214,7 +214,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-sm-6 p-0 d-flex justify-content-lg-start justify-content-center">
-                                        <h2 class="ml-lg-2">Lista de Pedidos</h2>
+                                        <h2 class="ml-lg-2">Lista de Rastreamento</h2>
                                     </div>
                                     <div class="col-sm-6 p-0 d-flex justify-content-lg-end justify-content-center">
                                         <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal">
