trocando as paginas perfil user pela pagina minha conta

--- a/pages/nova-forma-pagamento.html
+++ b/pages/nova-forma-pagamento.html
@@ -35,7 +35,7 @@
           <li class="menu-item"><a href="home-user.html">Inicio</a></li>
           <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
           <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+          <li class="menu-item login"><a href="minha-conta.html"><img src="../assets/foto-perfil-exemplo.png"
                 alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
             <a href="meu-carrinho.html" rel="noopener noreferrer">
