--- a/pages/doacoes-atualizadas.html
+++ b/pages/doacoes-atualizadas.html
@@ -86,6 +86,11 @@
     </div>
   </header>
 
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="chat-compras.html" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
+  </div>
 
   <div class="container">
     <nav class="nav nav-tabs nav-justified mt-3 mb-3">
