--- a/pages/meu-anuncio.html
+++ b/pages/meu-anuncio.html
@@ -53,7 +53,12 @@
     </div>
   </header>
 
-
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="chat-compras.html" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
+  </div>
+  
   <div class="container">
     <div class="d-flex align-items-center w-100 text-center p-3">
       <h3 class="my-2">Meu Anúncio</h3>
