--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -53,6 +53,12 @@
         </div>
       </header>
 
+      <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+        <a href="chat-compras.html" class="botao_chat">
+          <i class="bi bi-chat-text h1"></i>
+        </a>
+      </div>
+
     <div class="d-flex container justify-content-around">
         <div class="profile-nav col-md-3">
             <div class="panel">
