--- a/pages/nova-forma-pagamento.html
+++ b/pages/nova-forma-pagamento.html
@@ -46,6 +46,13 @@
       </nav>
     </div>
   </header>
+
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="chat-compras.html" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
+  </div>
+  
   <div class="container">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto w-50">
