--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -76,7 +76,7 @@
                             </i>Dados Perfil</a>
                     </li>
                     <li>
-                        <a href="endereco.html"><i class="bi bi-geo-alt-fill"></i>
+                        <a href="editar-endereco.html"><i class="bi bi-geo-alt-fill"></i>
                             </i>Endereços</a>
                     </li>
                     <li>
@@ -85,10 +85,10 @@
                                 class="label label-warning pull-right r-activity"></span></a>
                             </li>
                     <li>
-                        <a href="formas-pagamento.html"> <i class="bi bi-credit-card"></i>Formas de Pagamento</a>
+                        <a href="nova-forma-pagamento.html"> <i class="bi bi-credit-card"></i>Formas de Pagamento</a>
                     </li>
                     <li>
-                        <a href="#"> <i class="bi bi-heart-fill"></i>Favoritos</a>
+                        <a href="meus-favoritos.html"> <i class="bi bi-heart-fill"></i>Favoritos</a>
                     </li>
                     <li>
                         <a href="index.html"> <i class="bi bi-box-arrow-left"></i>Sair</a>
@@ -128,7 +128,9 @@
                     <input class="btn btn-primary mt-2 float-end" type="submit" value="Salvar">
                 </div>
                 <div class="mt-5">
-                    <input class="btn btn-primary mt-5 float-end apagar-conta" type="text" value="Apagar conta">
+                    <a href="index.html" class="btn btn-primary mt-5 float-end apagar-conta" type="text">
+                      Apagar Conta
+                    </a>
                 </div>
             </form>
         </div>
